# ak820ctl

./: .gitignore  .gitleaks.toml  .pip-audit-ignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMMANDS.md  README.md  SECURITY.md  meson.build  plan.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: check-changelog.sh
.github/: copilot-instructions.md  dependabot.yml  settings.yml
.github/workflows/: audit.yml  codeql.yml  coverage-comment.yml  dependabot-regen.yml  dependency-review.yml  gitleaks.yml  lint.yml  osv-scan.yml  pre-commit.yml  release.yml  scorecard.yml  security-lint.yml  test-report.yml  test.yml  typecheck.yml
@1@/: pytest-junit.xml
docs/: FIRMWARE-HACKING.md  PROTOCOL.md  RESEARCH.md  STATUS.md  firmware-analysis-helpers.md  unknown-commands.md  windows-driver-analysis.md
docs/superpowers/plans/: 2026-06-20-ak820ctl-decommit-requirements.md
docs/superpowers/specs/: 2026-06-20-dependabot-requirements-redesign-design.md
examples/perkey/: groups-alt.json  groups-basic.json  groups-cyberpunk.json  groups-dracula.json  groups-gruvbox.json  groups-monokai.json  groups-nord.json  groups-rainbow.json  groups-solarized.json  rows-pastel-forest.json  rows-pastel-ocean.json  rows-pastel-sunset.json  rows-pastel-turquoise.json  rows-stealth.json  stealth.json  sunset.json
experiments/: blocks-pastel-v1-softprimaries.json  blocks-pastel-v2-rows8sage.json  blocks-pastel-v3-grouped.json  blocks-pastel-v4-perrow-raspwrap.json  blocks-pastel-v5-orangewrap-pinkpunct.json  bt-experiment-stored-after-btmode-test.json  bt-experiment-stored-after-gray-read3.json  bt-experiment-stored-initial-backup.json  bt-experiment-write-all-gray.json  ocean-original-blocks.json  perkey-state-my-favorite-colors-pre-experiments.json
experiments/perkey/: test_perkey_blocks.json  test_perkey_boundaries.json  test_perkey_col0.json  test_perkey_edges.json  test_perkey_gaps.json  test_perkey_groups.yaml  test_perkey_guess1.json  test_perkey_guess2.json  test_perkey_known.json  test_perkey_probe.json  test_perkey_probe2.json  test_perkey_probe3.json  test_perkey_rainbow2.json  test_perkey_rows24.json  test_perkey_single.json  test_perkey_verify.json
scripts/: audit.py  demo_all.sh  demo_themes.py  generate_examples.py  generate_smileys.py  meson_pytest_wrapper.sh  regen_requirements.py
src/ak820ctl/: __init__.py  __main__.py  cli.py  commands.py  display.py  hid.py  keymap.json  keymap.py  keymap.yaml  keys.py  models.py  perkey.py
src/ak820ctl/_stubs/: hid.pyi
src/ak820ctl/data/: README.md  keymap.json
src/ak820ctl/data/layouts/: perrow.json  simple.json
src/ak820ctl/data/themes/: groups-alt-theme.json  groups-basic-theme.json  groups-cyberpunk-theme.json  groups-dracula-theme.json  groups-gruvbox-theme.json  groups-monokai-theme.json  groups-nord-theme.json  groups-rainbow-theme.json  groups-solarized-theme.json  rows-pastel-forest-theme.json  rows-pastel-ocean-theme.json  rows-pastel-sunset-theme.json  rows-pastel-turquoise-theme.json  rows-stealth-theme.json
stubs/: hid.pyi
stubs/typer/: __init__.pyi  testing.pyi
tests/: conftest.py  test_cli.py  test_commands.py  test_display.py  test_dump_restore.py  test_hid.py  test_keymap.py  test_main.py  test_models.py  test_perkey.py  test_probe.py  test_protocol_properties.py  test_regen_requirements.py  test_theme_compile.py
