[project]
name = "ak820ctl"
version = "0.1.0"
description = "Linux CLI tool for controlling Ajazz AK820 keyboard (time, LED, sleep)"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.14"
authors = [{ name = "Ivan Anishchuk", email = "" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.26.5",
    "rich>=13.0",
    "hidapi>=0.15.0",
    "pydantic>=2.13.4",
    "Pillow>=11.0",
]

[project.urls]
Homepage = "https://github.com/IvanAnishchuk/ak820ctl"
Repository = "https://github.com/IvanAnishchuk/ak820ctl"
Issues = "https://github.com/IvanAnishchuk/ak820ctl/issues"
Changelog = "https://github.com/IvanAnishchuk/ak820ctl/blob/main/CHANGELOG.md"
Security = "https://github.com/IvanAnishchuk/ak820ctl/blob/main/SECURITY.md"

[project.scripts]
ak820ctl = "ak820ctl.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "ty",
    "pytest>=9.1.0",
    "pytest-cov>=6.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.0",
    "ossguard>=0.1.4",
    "zensical>=0.0.46",
    "meson-python>=0.20.0",
    "meson>=1.11.1",
    "ninja>=1.13.0",
    "mypy>=2.1.0",
    "basedpyright>=1.39.8",
    "mutmut>=3.6.0",
    "hypothesis>=6.155.7",
    "lxml>=5.0",
    "lxml-stubs>=0.5.1",
    "types-Pillow>=10.0",
    "diff-cover>=9.0",
]

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ak820ctl"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "SIM",   # flake8-simplify
    "BLE",   # flake8-blind-except
    "TRY",   # tryceratops
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "C4",    # flake8-comprehensions
    "PL",    # pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert is fine in tests
    "S603",    # subprocess with validated input in fixtures
    "S607",    # partial executable path in test setup
    "BLE001",  # broad Exception in test fixtures
    "T20",     # print is useful in test debugging
    "PLR2004", # magic values are expected in protocol tests
]
"scripts/*" = [
    "S603",    # subprocess args are list literals, not user input
    "S607",    # partial paths are fine for well-known tools (uv, python)
]

[tool.ruff.lint.pylint]
max-args = 8
max-returns = 8
max-branches = 15
max-statements = 60

[tool.ruff.lint.isort]
known-first-party = ["ak820ctl"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.14"
extra-paths = ["stubs"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "hid"
ignore_missing_imports = true

[tool.basedpyright]
typeCheckingMode = "recommended"
# Other settings (pythonVersion, venvPath, venv, extraPaths, include) live in
# pyrightconfig.json so vanilla pyright (used by IDE/LSP integrations) and
# basedpyright share one source of truth.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ak820ctl",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-report=html:.reports/test/htmlcov",
    "--cov-report=xml:.reports/test/coverage.xml",
    "--junitxml=.reports/test/test-results.xml",
    "-ra",
]
junit_family = "xunit2"
junit_logging = "all"
junit_log_passing_tests = false

[tool.coverage.run]
source_pkgs = ["ak820ctl"]
branch = true
relative_files = true

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
